CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -21.11 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -21.11 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR_IR5
CPOP Gain: $ -134.26 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR_QP
CPOP Gain: $ -166.34 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_QP_IR5
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AL
CPOP Gain: $ -192.41 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_QP
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_AV
CPOP Gain: $ -192.12 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QL
CPOP Gain: $ -192.12 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QP
CPOP Gain: $ -5338.36 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AO_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IR5
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_LI
CPOP Gain: $ -192.12 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM
CPOP Gain: $ -7.27 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_DB30
CPOP Gain: $ 13.57 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AO
CPOP Gain: $ -920.44 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -21.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -21.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_IR5
CPOP Gain: $ -134.34 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_QP
CPOP Gain: $ -163.88 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QP_IR5
CPOP Gain: $ -21.76 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AL
CPOP Gain: $ -192.8 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_QP
CPOP Gain: $ -21.76 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_AV
CPOP Gain: $ -192.6 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QL
CPOP Gain: $ -192.6 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QP
CPOP Gain: $ -5329.86 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AO_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IR5
CPOP Gain: $ -21.76 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_LI
CPOP Gain: $ -192.6 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM
CPOP Gain: $ -8.47 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_DB30
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AO
CPOP Gain: $ -1485.17 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -21.11 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -21.11 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_IR5
CPOP Gain: $ -134.26 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_QP
CPOP Gain: $ -167.76 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QP_IR5
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AL
CPOP Gain: $ -194.39 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_QP
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_AV
CPOP Gain: $ -194.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QL
CPOP Gain: $ -194.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QP
CPOP Gain: $ -5312.66 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AO_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IR5
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_LI
CPOP Gain: $ -194.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM
CPOP Gain: $ -7.47 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_DB30
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AO
CPOP Gain: $ -2522.94 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -23.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -23.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_IR5
CPOP Gain: $ -136.39 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_QP
CPOP Gain: $ -178.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP_IR5
CPOP Gain: $ -23.81 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AL
CPOP Gain: $ -204.35 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_QP
CPOP Gain: $ -23.81 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AV
CPOP Gain: $ -201.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QL
CPOP Gain: $ -201.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QP
CPOP Gain: $ -4686.87 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AO_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IR5
CPOP Gain: $ -23.81 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_LI
CPOP Gain: $ -201.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM
CPOP Gain: $ -4.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_DB30
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AO
CPOP Gain: $ -4560.34 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -21.11 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -21.11 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR_IR5
CPOP Gain: $ -134.26 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR_QP
CPOP Gain: $ -166.34 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_QP_IR5
CPOP Gain: $ -21.68 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AL
CPOP Gain: $ -192.41 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_QP
CPOP Gain: $ -21.68 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_AL
CPOP Gain: $ -192.12 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QL
CPOP Gain: $ -6.3 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QP
CPOP Gain: $ -5338.36 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AO_AC
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_QP_PM
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IR5
CPOP Gain: $ -21.68 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_LI
CPOP Gain: $ -192.12 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM
CPOP Gain: $ -7.27 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_DB30
CPOP Gain: $ 13.57 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AO
CPOP Gain: $ -920.44 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AC
CPOP Gain: $ -6.3 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_PM
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TS
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -21.19 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -21.19 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_IR5
CPOP Gain: $ -134.34 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_QP
CPOP Gain: $ -163.88 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QP_IR5
CPOP Gain: $ -21.76 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AL
CPOP Gain: $ -192.8 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_QP
CPOP Gain: $ -21.76 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_AL
CPOP Gain: $ -192.6 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QL
CPOP Gain: $ -6.3 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QP
CPOP Gain: $ -5329.86 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AO_AC
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QP_PM
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IR5
CPOP Gain: $ -21.76 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_LI
CPOP Gain: $ -192.6 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM
CPOP Gain: $ -8.47 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_DB30
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AO
CPOP Gain: $ -1485.17 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AC
CPOP Gain: $ -6.3 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_PM
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TS
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -21.11 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -21.11 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_IR5
CPOP Gain: $ -134.26 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_QP
CPOP Gain: $ -167.76 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QP_IR5
CPOP Gain: $ -21.68 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AL
CPOP Gain: $ -194.39 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_QP
CPOP Gain: $ -21.68 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_AL
CPOP Gain: $ -194.19 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QL
CPOP Gain: $ -6.3 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QP
CPOP Gain: $ -5312.66 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AO_AC
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QP_PM
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IR5
CPOP Gain: $ -21.68 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_LI
CPOP Gain: $ -194.19 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM
CPOP Gain: $ -7.47 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_DB30
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AO
CPOP Gain: $ -2522.94 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AC
CPOP Gain: $ -6.3 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_PM
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TS
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -23.24 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -23.24 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_IR5
CPOP Gain: $ -136.39 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_QP
CPOP Gain: $ -178.24 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP_IR5
CPOP Gain: $ -23.81 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AL
CPOP Gain: $ -204.35 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_QP
CPOP Gain: $ -23.81 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AL
CPOP Gain: $ -201.24 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QL
CPOP Gain: $ -6.3 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QP
CPOP Gain: $ -4686.87 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AO_AC
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP_PM
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IR5
CPOP Gain: $ -23.81 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_LI
CPOP Gain: $ -201.24 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM
CPOP Gain: $ -4.68 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_DB30
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AO
CPOP Gain: $ -4560.34 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AC
CPOP Gain: $ -6.3 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_PM
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TS
CPOP Gain: $ 14.11 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TS
CPOP Gain: $ 12.87 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2
CPOP Gain: $ 1.95 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TR_QP_DB15
CPOP Gain: $ -31.47 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_TR_DB15
CPOP Gain: $ 2.77 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_AV_DB15
CPOP Gain: $ 2.07 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_AL_DB15
CPOP Gain: $ 1.49 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_QP_DB15
CPOP Gain: $ -32.18 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_TR_DB15
CPOP Gain: $ 2.77 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_AV_DB15
CPOP Gain: $ 1.49 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_QP_DB15
CPOP Gain: $ 2.97 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IT_QL_DB15
CPOP Gain: $ -1.94 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IT_QP_DB15
CPOP Gain: $ -36.92 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TR_IR4
CPOP Gain: $ -130.53 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TR_QP
CPOP Gain: $ -80.58 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_QP_IR4
CPOP Gain: $ -41.75 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_TR
CPOP Gain: $ -15.35 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_AV
CPOP Gain: $ 12.26 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_AL
CPOP Gain: $ -139.91 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_QP
CPOP Gain: $ -42.46 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_TR
CPOP Gain: $ -15.35 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_AV
CPOP Gain: $ 12.26 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_AL
CPOP Gain: $ -139.91 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_QP
CPOP Gain: $ -6.17 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IT_QL
CPOP Gain: $ -6.43 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IT_QP
CPOP Gain: $ 11.88 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_AO_AC
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_QP_PM
CPOP Gain: $ 12.87 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV
CPOP Gain: $ 4.79 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IR4
CPOP Gain: $ -42.46 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TR
CPOP Gain: $ -15.35 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_AV
CPOP Gain: $ 12.26 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_AL
CPOP Gain: $ 3.54 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_VI
CPOP Gain: $ 12.77 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_LI
CPOP Gain: $ -139.91 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_QP
CPOP Gain: $ 12.87 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM
CPOP Gain: $ 12.87 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_SS
CPOP Gain: $ -6.22 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_QL
CPOP Gain: $ 2.16 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_DB15
CPOP Gain: $ 12.87 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_AO
CPOP Gain: $ 11.88 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_AC
CPOP Gain: $ -6.43 Win %: 0 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IT
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_PM
CPOP Gain: $ 12.87 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TS
CPOP Gain: $ 1.85 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TR_QP_DB10
CPOP Gain: $ -23.73 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_TR_DB10
CPOP Gain: $ 2.42 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_AV_DB10
CPOP Gain: $ 2.17 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_AL_DB10
CPOP Gain: $ 1.2 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_QP_DB10
CPOP Gain: $ -23.73 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_TR_DB10
CPOP Gain: $ 2.42 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_AV_DB10
CPOP Gain: $ 1.2 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_QP_DB10
CPOP Gain: $ 2.94 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IT_QL_DB10
CPOP Gain: $ -1.99 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IT_QP_DB10
CPOP Gain: $ -29.92 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TR_IR3
CPOP Gain: $ 1.81 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TR_QP
CPOP Gain: $ -147.96 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_QP_IR3
CPOP Gain: $ -3.18 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_TR
CPOP Gain: $ 4.98 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_AV
CPOP Gain: $ 4.73 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_AL
CPOP Gain: $ -168.31 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_QP
CPOP Gain: $ -25.89 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_TR
CPOP Gain: $ 4.98 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_AV
CPOP Gain: $ 4.73 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_AL
CPOP Gain: $ -168.01 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_QP
CPOP Gain: $ -2.85 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IT_QL
CPOP Gain: $ -1.94 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IT_QP
CPOP Gain: $ -5003.85 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_AO_AC
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_QP_PM
CPOP Gain: $ 12.74 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV
CPOP Gain: $ -84.52 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IR3
CPOP Gain: $ -26.59 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TR
CPOP Gain: $ 4.98 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_AV
CPOP Gain: $ 4.73 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_AL
CPOP Gain: $ 10.78 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_VI
CPOP Gain: $ 8.15 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_LI
CPOP Gain: $ -168.01 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_QP
CPOP Gain: $ 12.74 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM
CPOP Gain: $ 11.88 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_SS
CPOP Gain: $ -2.91 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_QL
CPOP Gain: $ 1.82 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_DB10
CPOP Gain: $ -533.02 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_AO
CPOP Gain: $ -743.44 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_AC
CPOP Gain: $ -5.79 Win %: 0 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IT
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_PM
CPOP Gain: $ -1.35 Win %: 50.00 in 2 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TS
CPOP Gain: $ 1.73 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -21.79 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 2.67 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 1.8 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 1.03 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -21.79 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 2.67 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 1.03 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.04 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.94 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 0.09 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_IR5
CPOP Gain: $ -135.68 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_QP
CPOP Gain: $ -169.85 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QP_IR5
CPOP Gain: $ -22.77 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_TR
CPOP Gain: $ 3.49 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AV
CPOP Gain: $ 0.43 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AL
CPOP Gain: $ -196.68 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_QP
CPOP Gain: $ -21.85 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_TR
CPOP Gain: $ 3.49 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_AV
CPOP Gain: $ 0.43 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_AL
CPOP Gain: $ -196.48 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_QP
CPOP Gain: $ -6.14 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QL
CPOP Gain: $ -6.4 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QP
CPOP Gain: $ -5372.24 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AO_AC
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QP_PM
CPOP Gain: $ 12.53 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV
CPOP Gain: $ -0.39 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IR5
CPOP Gain: $ -22.77 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR
CPOP Gain: $ 3.49 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AV
CPOP Gain: $ 0.43 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AL
CPOP Gain: $ 1.12 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_VI
CPOP Gain: $ 11.52 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_LI
CPOP Gain: $ -194.33 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QP
CPOP Gain: $ 12.53 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM
CPOP Gain: $ -9.05 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_SS
CPOP Gain: $ -6.23 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QL
CPOP Gain: $ 1.78 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_DB30
CPOP Gain: $ 12.52 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AO
CPOP Gain: $ -2543.31 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AC
CPOP Gain: $ -6.4 Win %: 0 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT
CPOP Gain: $ 0 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_PM
CPOP Gain: $ 12.53 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TS
CPOP Gain: $ 1.73 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -23.92 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 2.67 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 1.79 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 0.97 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -23.4 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 2.67 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 0.97 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.03 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.94 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 0.09 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_IR5
CPOP Gain: $ -137.93 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_QP
CPOP Gain: $ -180.42 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP_IR5
CPOP Gain: $ -24.89 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_TR
CPOP Gain: $ 3.83 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AV
CPOP Gain: $ 0.42 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AL
CPOP Gain: $ -206.7 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_QP
CPOP Gain: $ -24.89 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_TR
CPOP Gain: $ 3.49 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AV
CPOP Gain: $ 0.42 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AL
CPOP Gain: $ -203.59 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_QP
CPOP Gain: $ -6.12 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QL
CPOP Gain: $ -6.4 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QP
CPOP Gain: $ -4732.72 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AO_AC
CPOP Gain: $ 0.02 Win %: 100.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP_PM
CPOP Gain: $ 12.52 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV
CPOP Gain: $ -0.44 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IR5
CPOP Gain: $ -24.89 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR
CPOP Gain: $ 3.49 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AV
CPOP Gain: $ 0.42 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AL
CPOP Gain: $ 1.08 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_VI
CPOP Gain: $ 11.53 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_LI
CPOP Gain: $ -203.59 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP
CPOP Gain: $ 12.52 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM
CPOP Gain: $ -6.27 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_SS
CPOP Gain: $ -6.23 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QL
CPOP Gain: $ 1.77 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_DB30
CPOP Gain: $ 12.52 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AO
CPOP Gain: $ -4593.39 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AC
CPOP Gain: $ -6.4 Win %: 0 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT
CPOP Gain: $ -0.09 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_PM
CPOP Gain: $ 12.52 Win %: 50.00 in 2 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TS
